assets/style.css
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  background-color: #000;
  color: #fff;
  height: 100vh;
  overflow: hidden;
}

#root {
  height: 100%;
}

#player {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.title {
  font-size: 2rem;
  text-align: center;
  padding: 1rem;
  margin-top: 10px;
  color: #9370DB;
  font-weight: bold;
}

.title a {
  color: #9370DB;
  text-decoration: none;
}

.title a:hover {
  text-decoration: underline;
}

.content-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  margin: 0 auto;
}

.player-container {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px 20px;
  min-height: 450px;
}

.player-container iframe {
  width: 100%;
  height: 100%;
  max-width: 800px;
  max-height: 450px;
  border: none;
}

.dock-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 10px;
  width: 100%;
  gap: 20px;
  position: relative;
  margin-bottom: 30px;
}

.dock-item {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0.5rem;
  cursor: pointer;
  transition: all 0.3s ease;
  width: 85px;
  height: 130px;
}

.dock-item img {
  width: 70px;
  height: 70px;
  object-fit: cover;
  border-radius: 10px;
  transition: all 0.3s cubic-bezier(0.2, 0.8, 0.2, 1.2);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
}

.dock-item:hover {
  z-index: 10;
}

.dock-item:hover img {
  width: 120px;
  height: 120px;
  transform: translateY(-20px);
  box-shadow: 0 0 30px rgba(147, 112, 219, 0.8);
}

.dock-label {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.3s ease;
  background-color: rgba(0, 0, 0, 0.7);
  padding: 5px 10px;
  border-radius: 5px;
  white-space: nowrap;
  color: #9370DB;
  font-weight: bold;
}

.dock-item:hover .dock-label {
  opacity: 1;
}

.active .dock-label {
  opacity: 1;
  color: #9370DB;
}

.active img {
  border: 2px solid #9370DB;
} 

